Bug 117386 Crash changing themes [@ nsXBLPrototypeResources::FlushSkinSheets] r=dbradley sr=brendan