content/xbl/src/nsXBLPrototypeResources.cpp
@@ -137,7 +137,8 @@ nsXBLPrototypeResources::FlushSkinSheets()
 
     if (IsChromeURI(uri)) {
       PRBool complete;
-      loader->LoadAgentSheet(uri, *getter_AddRefs(newSheet), complete, nsnull);
+      if (NS_FAILED(loader->LoadAgentSheet(uri, *getter_AddRefs(newSheet), complete, nsnull))
+        continue;
     }
     else 
       newSheet = oldSheet;
